; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/vc04_services/interface/vchiq_arm/extr_vchiq_arm.c_vchiq_instance_get_use_count.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/vc04_services/interface/vchiq_arm/extr_vchiq_arm.c_vchiq_instance_get_use_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.vchiq_service = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vchiq_instance_get_use_count(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.vchiq_service*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %13, %1
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %11 = call %struct.vchiq_service* @next_service_by_instance(i32 %9, %struct.TYPE_4__* %10, i32* %5)
  store %struct.vchiq_service* %11, %struct.vchiq_service** %3, align 8
  %12 = icmp ne %struct.vchiq_service* %11, null
  br i1 %12, label %13, label %23

13:                                               ; preds = %6
  %14 = load %struct.vchiq_service*, %struct.vchiq_service** %3, align 8
  %15 = getelementptr inbounds %struct.vchiq_service, %struct.vchiq_service* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i32, i32* %4, align 4
  %18 = sext i32 %17 to i64
  %19 = add nsw i64 %18, %16
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %4, align 4
  %21 = load %struct.vchiq_service*, %struct.vchiq_service** %3, align 8
  %22 = call i32 @unlock_service(%struct.vchiq_service* %21)
  br label %6

23:                                               ; preds = %6
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local %struct.vchiq_service* @next_service_by_instance(i32, %struct.TYPE_4__*, i32*) #1

declare dso_local i32 @unlock_service(%struct.vchiq_service*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
